codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_exec_footer__tests__render_two_sessions.snap
---
source: tui/src/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 2 },
    content: [
        "  Background terminal running: echo hello · rg    ",
        "                               "foo" src          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 44, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
